--- a/CSS3/mask2.html
+++ b/CSS3/mask2.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <title>mask</title>
     <style>
-    #box {
-        width: 200px;
-        height: 200px;
-        background: url(img/1.jpg);
-        background-size: cover;
-        -webkit-background-clip: text;
-        font-size: 200px;
-        font-weight: bolder;
-        color: rgba(0, 0, 0, 0.1);
-    }
+        #box {
+            width: 200px;
+            height: 200px;
+            background: url(img/1.jpg);
+            background-size: cover;
+            -webkit-background-clip: text;
+            font-size: 200px;
+            font-weight: bolder;
+            color: rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
-    <div id="box">品</div>
+    <div id="box">W</div>
 </body>
 </html>
